--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.6
   provider: ^6.1.2
   audioplayers: ^6.1.0
+  supabase_flutter: ^2.8.1
+  lottie: ^3.1.3
+  shared_preferences: ^2.1.0
 
 dev_dependencies:
   flutter_test:
